<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.bogdanovmn.inpx</groupId>
	<artifactId>inpx</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<modules>
		<module>inpx-core</module>
		<module>inpx-cli</module>
	</modules>

	<properties>
		<revision>0.0.1</revision>
		<encoding>UTF-8</encoding>
		<java.version>17</java.version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<!-- Modules -->

			<dependency>
				<groupId>com.github.bogdanovmn.inpx.core</groupId>
				<artifactId>inpx-core</artifactId>
				<version>${revision}</version>
			</dependency>

			<!-- My Libs -->

			<dependency>
				<groupId>com.github.bogdanovmn.cmdline</groupId>
				<artifactId>cmdline-app</artifactId>
				<version>2.2.0</version>
			</dependency>
			<dependency>
				<groupId>com.github.bogdanovmn.humanreadablevalues</groupId>
				<artifactId>human-readable-values</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>com.github.bogdanovmn.common.core</groupId>
				<artifactId>common-core</artifactId>
				<version>1.9.3</version>
			</dependency>

			<!-- Others -->
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.16.0</version>
            </dependency>
            <dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.4.8</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.28</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>5.7.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<encoding>${encoding}</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<testSource>${java.version}</testSource>
					<testTarget>${java.version}</testTarget>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.2.5</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>